add test branch: set jdk.version = 11